--- a/easyeats/src/app/altera-dados/altera-dados.component.html
+++ b/easyeats/src/app/altera-dados/altera-dados.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="box-btn-perfil">
                 <div class="box-btn-left">
-                    <a href="meu-perfil">Cancelar</a>
+                    <a routerLink="meu-perfil">Cancelar</a>
                 </div>
                 <div class="box-btn-right">
                     <button class="botao_concluir" (click)="AlterarDados(nome.value, senhaAtual.value, senha.value, email.value, telefone.value)">
