--- a/easyeats/src/app/cadastro/cadastro.component.html
+++ b/easyeats/src/app/cadastro/cadastro.component.html
@@ -12,7 +12,7 @@
         <input placeholder="Digite sua senha" type="password" required #senha>
         <input placeholder="(11) 99999-9999" type="text" required #telefone>
         <button (click)="cadastroUser(nome.value, email.value, senha.value, telefone.value)">Cadastrar</button>
-        <a href="/login">Ja tenho conta.</a>
+        <a routerLink="/login">Ja tenho conta.</a>
       </div>
   </div>
 </div>
