--- a/easyeats/src/app/favoritos/favoritos.component.html
+++ b/easyeats/src/app/favoritos/favoritos.component.html
@@ -9,16 +9,16 @@
             </div>
             <div class="box-100">
                 <div class="box-tipo-cardapio">
-                    <a href="/burguerOne">Easy Burguer</a>
+                    <a routerLink="/burguerOne">Easy Burguer</a>
                 </div>
                 <div class="box-tipo-cardapio-1">
-                    <a href="/aperitivo-one">Easy Aperitivos</a>
+                    <a routerLink="/aperitivo-one">Easy Aperitivos</a>
                 </div>
                 <div class="box-tipo-cardapio-2">
-                    <a href="/japaOne">Easy Japa</a>
+                    <a routerLink="/japaOne">Easy Japa</a>
                 </div>
                 <div class="box-tipo-cardapio-3">
-                    <a href="/pratoOne">Easy Comidinhas</a>
+                    <a routerLink="/pratoOne">Easy Comidinhas</a>
                 </div>
             </div>
         </div>
