--- a/easyeats/src/app/footer/footer.component.html
+++ b/easyeats/src/app/footer/footer.component.html
@@ -2,22 +2,22 @@
     <div class="container">
       <ul class="footer-ul">
         <li>
-          <a class="box-img-footer" href="../favoritos">
+          <a class="box-img-footer" routerLink="../favoritos">
             <img src="../assets/imagens/icon-home.png" alt="" class="img-responsive">
           </a>
         </li>
         <li>
-          <a class="box-img-footer" href="../cardapio">
+          <a class="box-img-footer" routerLink="../cardapio">
             <img src="../assets/imagens/icon-food.png" alt="" class="img-responsive">
           </a>
         </li>
         <li>
-          <a class="box-img-footer" href="../cardapio-bebida">
+          <a class="box-img-footer" routerLink="../cardapio-bebida">
             <img src="../assets/imagens/icon-drink.png" alt="" class="img-responsive">
           </a>
         </li>
         <li>
-          <a class="box-img-footer" href="../meu-perfil">
+          <a class="box-img-footer" routerLink="../meu-perfil">
             <img src="../assets/imagens/icon-perfil.png" alt="" class="img-responsive">
           </a>
         </li> 
