--- a/easyeats/src/app/login/login.component.html
+++ b/easyeats/src/app/login/login.component.html
@@ -11,7 +11,7 @@
           <input placeholder="Digite seu email" type="text" #email>
           <input placeholder="Digite a senha" type="password" #senha>
           <button (click)="loginUser(email.value, senha.value)">Entrar</button>
-          <a href="/cadastro">Cadastre-se</a>
+          <a routerLink="/cadastro">Cadastre-se</a>
         </div>
       </div>
     </div>
