--- a/easyeats/src/app/perfil/perfil.component.html
+++ b/easyeats/src/app/perfil/perfil.component.html
@@ -14,10 +14,10 @@
         </div>
         <div class="box-btn-perfil">
             <div class="box-btn-left">
-                <a href="altera-dados">Alterar Dados</a>
+                <a routerLink="altera-dados">Alterar Dados</a>
             </div>
             <div class="box-btn-right">
-                <a href="deleta-conta">Deletar Conta</a>
+                <a routerLink="deleta-conta">Deletar Conta</a>
             </div>
         </div>
         <div class="box-btn-sair">
