--- a/easyeats/src/app/cardapios/cardapios.component.html
+++ b/easyeats/src/app/cardapios/cardapios.component.html
@@ -2,11 +2,11 @@
 <main>
     <div class="container">
         <div class="flex">
-            <a class="box-100 btn-cardapios" routerLink="cardapio-aperitivos">Aperitivos</a>
-            <a class="box-100 btn-cardapios" routerLink="cardapioBurguer">Hambúrgueres</a>
-            <a class="box-100 btn-cardapios" routerLink="cardapio-prato">Pratos</a>
-            <a class="box-100 btn-cardapios" routerLink="cardapio-sobremesa">Sobremesas</a>
-            <a class="box-100 btn-cardapios" routerLink="cardapio-japa">Japas</a>
+            <a class="box-100 btn-cardapios" href="cardapio-aperitivos">Aperitivos</a>
+            <a class="box-100 btn-cardapios" href="cardapioBurguer">Hambúrgueres</a>
+            <a class="box-100 btn-cardapios" href="cardapio-prato">Pratos</a>
+            <a class="box-100 btn-cardapios" href="cardapio-sobremesa">Sobremesas</a>
+            <a class="box-100 btn-cardapios" href="cardapio-japa">Japas</a>
         </div>
     </div>
 </main>
