--- a/easyeats/src/app/deleta-conta/deleta-conta.component.html
+++ b/easyeats/src/app/deleta-conta/deleta-conta.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="box-btn-perfil">
             <div class="box-btn-left">
-                <a routerLink="meu-perfil">Cancelar</a>
+                <a href="meu-perfil">Cancelar</a>
             </div>
             <div class="box-btn-right">
                 <div class="botao_direito">
