--- a/easyeats/src/app/home/home.component.html
+++ b/easyeats/src/app/home/home.component.html
@@ -4,29 +4,29 @@
       <div class="flex">
         <div class="box-100">
           <div class="box-tipo-cardapio-1">
-            <a routerLink="/cardapio-aperitivos">Easy Espetinhos</a >
+            <a href="/cardapio-aperitivos">Easy Espetinhos</a >
           </div>
           <div class="box-tipo-cardapio-2">
-            <a routerLink="/cardapio-aperitivos">Easy Sushi</a >
+            <a href="/cardapio-aperitivos">Easy Sushi</a >
           </div>
           <div class="box-tipo-cardapio">
-            <a routerLink="/cardapio-aperitivos">Easy Burguer</a >
+            <a href="/cardapio-aperitivos">Easy Burguer</a >
           </div>
           <div class="box-tipo-cardapio-3">
-            <a routerLink="/cardapio-aperitivos">Easy Comidinhas</a >
+            <a href="/cardapio-aperitivos">Easy Comidinhas</a >
           </div>
           <!-- <div class="box-tipo-cardapio">
-            <a routerLink="/cardapio-hamburgueres">Hambúrgueres</a >
+            <a href="/cardapio-hamburgueres">Hambúrgueres</a >
           </div>
           <div class="box-tipo-cardapio">
-            <a routerLink="/cardapio-pratos">Pratos</a >
+            <a href="/cardapio-pratos">Pratos</a >
           </div>
           <div class="box-tipo-cardapio">
-            <a routerLink="/cardapio-bebidas">Bebida</a >
+            <a href="/cardapio-bebidas">Bebida</a >
           </div>
           <div class="box-sobremesas">
             <div class="box-tipo-cardapio">
-              <a routerLink="">Sobremesas</a >
+              <a href="">Sobremesas</a >
             </div>
           </div> -->
         </div>
